added notificaiton class, changed css of notivation .

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -65,6 +65,10 @@ body {
   font-weight: 700;
 }
 
+.notification{
+  background-color:yellow;
+}
+
 .navbar {
   background: tomato;
   border-bottom: 1px solid black;
