navbar has hardcoded users online and is styled correctly.

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -91,3 +91,27 @@ body {
   padding: 0 10px;
   text-decoration: none;
 }
+
+.navbar-brand {
+  color: inherit;
+  display: block;
+  float: left;
+  font-weight: 700;
+  font-size: 28px;
+  height: 60px;
+  line-height: 60px;
+  padding: 0 10px;
+  text-decoration: none;
+}
+
+.navbar-users-logged {
+  color: inherit;
+  display: block;
+  float: right;
+  font-weight: 0;
+  font-size: 18px;
+  height: 60px;
+  line-height: 60px;
+  padding: 0 10px;
+  text-decoration: none;
+}
